Fix deprecation warnings (#2747)
- Stop using deprecated ExpectedException, replace with assertThrows usage
- Stop using deprecated Long constructor
- Use Java NIO APIs instead of deprecated Guava or commons-io ones
- Stop using deprecated API in FormatterHandlerTest