@@ -19,6 +19,7 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.Reader;
 import java.net.URI;
+import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Collection;
@@ -46,9 +47,7 @@ import org.eclipse.core.runtime.URIUtil;
 import org.eclipse.jdt.core.IJavaModelMarker;
 import org.eclipse.jdt.core.compiler.IProblem;
 
-import com.google.common.base.Charsets;
 import com.google.common.io.CharStreams;
-import com.google.common.io.Files;
 
 /**
  * @author Fred Bricon
@@ -122,7 +121,7 @@ public final class ResourceUtils {
 		}
 		String content;
 		try {
-			content = Files.toString(toFile(fileURI), Charsets.UTF_8);
+			content = Files.readString(toFile(fileURI).toPath());
 		} catch (IOException e) {
 			throw new CoreException(StatusFactory.newErrorStatus("Can not get " + fileURI + " content", e));
 		}
@@ -138,7 +137,7 @@ public final class ResourceUtils {
 			content = "";
 		}
 		try {
-			Files.write(content, toFile(fileURI), Charsets.UTF_8);
+			Files.writeString(toFile(fileURI).toPath(), content);
 		} catch (IOException e) {
 			throw new CoreException(StatusFactory.newErrorStatus("Can not write to " + fileURI, e));
 		}
